syntax = "proto3";

package direktiv_functions;

option go_package = "github.com/direktiv/direktiv/pkg/functions/grpc";


message WatchLogsRequest {
	optional string PodName = 1;
}

message WatchLogsResponse {
	optional string data = 1;
}
